--- a/lambda/isHackathon/package.json
+++ b/lambda/isHackathon/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha",
-    "zip": "zip -r isHackathon.zip .",
+    "zip": "zip -r -q isHackathon.zip .",
     "deploy": "aws lambda update-function-code --function-name isHackathon --zip-file fileb://./isHackathon.zip"
   },
   "author": "Abhinav Madahar",
